# ADCG

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindIPOPT.cmake
include/: adcg_ascalar.hpp  adcg_binary_ops.hpp  adcg_math_ops.hpp  adcg_types.hpp
src/: CMakeLists.txt  adcg.cpp
test/: CMakeLists.txt  SingleTrack.cpp  SingleTrack2.cpp  SingleTrackInt.cpp  SingleTrackInt2.cpp  der.cpp  der2.cpp
test/Ipopt/: hs071_nlp.cpp  hs071_nlp.hpp
