add_executable(ADCG adcg.cpp)
target_include_directories(ADCG PUBLIC ${INCLUDE_DIR})
target_link_directories(ADCG PUBLIC ${LIBS_DIR})
target_link_libraries(ADCG PUBLIC -lm)
target_compile_options(ADCG PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_COMPILE_OPTIONS>)
target_include_directories(ADCG PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(ADCG PUBLIC $<LINK_ONLY:MKL::MKL>)
