set(INCLUDE_DIR "../include")
set(LIBS_DIR "../lib")

add_executable(SingleTrack SingleTrack.cpp)
target_link_directories(SingleTrack PUBLIC ${LIBS_DIR})
target_include_directories(SingleTrack PUBLIC ${INCLUDE_DIR})
target_link_libraries(SingleTrack PUBLIC -lm)
target_compile_options(SingleTrack PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_COMPILE_OPTIONS>)
target_include_directories(SingleTrack PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(SingleTrack PUBLIC $<LINK_ONLY:MKL::MKL>)

add_executable(SingleTrackInt SingleTrackInt.cpp)
target_link_directories(SingleTrackInt PUBLIC ${LIBS_DIR})
target_include_directories(SingleTrackInt PUBLIC ${INCLUDE_DIR})
target_link_libraries(SingleTrackInt PUBLIC -lm)
target_compile_options(SingleTrackInt PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_COMPILE_OPTIONS>)
target_include_directories(SingleTrackInt PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(SingleTrackInt PUBLIC $<LINK_ONLY:MKL::MKL>)

add_executable(der2 der2.cpp)
target_link_directories(der2 PUBLIC ${LIBS_DIR})
target_include_directories(der2 PUBLIC ${INCLUDE_DIR})
target_link_libraries(der2 PUBLIC -lm)
target_compile_options(der2 PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_COMPILE_OPTIONS>)
target_include_directories(der2 PUBLIC $<TARGET_PROPERTY:MKL::MKL,INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(der2 PUBLIC $<LINK_ONLY:MKL::MKL>)
